website/code/partialsums-gcj.log
BUILD COMMANDS FOR: partialsums.gcj

Thu Mar 30 23:52:12 PST 2006

/usr/bin/gcj -O3 -fomit-frame-pointer -funroll-loops -o partialsums.gcj_run --main=partialsums partialsums.java
partialsums.java: In class 'partialsums':
partialsums.java: In method 'partialsums.main(java.lang.String[])':
partialsums.java:41: error: Can't find method 'printf(Ljava/lang/String;DLjava/lang/String;)' in type 'java.io.PrintStream'.
               System.out.printf("%.9f\t%s\n", sum[i],  names[i] ); // JRE 1.5 only
                         ^
1 error
make[2]: [partialsums.gcj_run] Error 1 (ignored)
rm partialsums.java

=================================================================
COMMAND LINE (%A is single numeric argument):

partialsums.gcj_run %A
Error, could not exec partialsums.gcj_run 25000 (No such file or directory)
PATH=/opt/shootout/shootout/bench/partialsums:/opt/shootout/shootout/bench/partialsums/tmp:/usr/lib/smarteiffel/bin:/usr/local/Acrobat5/bin:/usr/lib/postgresql/bin:/home/brent/GNUstep/Tools:/usr/local/lib/GNUstep/Local/Tools:/usr/local/lib/GNUstep/Network/Tools:/usr/lib/GNUstep/System/Tools:/usr/local/bin:/usr/bin:/bin:/usr/bin/X11:/usr/games
TEST FAILED - Child processed exited with error code (1)


PROGRAM OUTPUT
==============
